--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "auth0": "^2.3.1",
+    "babel-core": "^6.11.4",
+    "bluebird": "^3.4.1",
     "body-parser": "~1.13.2",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.3.5",
@@ -21,6 +23,7 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.0",
     "passport-auth0": "^0.5.0",
+    "sandbox": "^0.8.6",
     "serve-favicon": "~2.3.0"
   }
 }
