--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "passport": "^0.3.0",
     "passport-auth0": "^0.5.0",
     "sandbox": "^0.8.6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "babel-plugin-transform-auth0-rule": "git://github.com/AmaanC/babel-plugin-transform-auth0-rule"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
