--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "auth0": "^2.3.1",
     "babel-core": "^6.11.4",
+    "babel-plugin-transform-auth0-rule": "^1.0.0",
     "bluebird": "^3.4.1",
     "body-parser": "~1.13.2",
     "connect-ensure-login": "^0.1.1",
@@ -24,8 +25,7 @@
     "passport": "^0.3.0",
     "passport-auth0": "^0.5.0",
     "sandbox": "^0.8.6",
-    "serve-favicon": "~2.3.0",
-    "babel-plugin-transform-auth0-rule": "git://github.com/AmaanC/babel-plugin-transform-auth0-rule"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "chai": "^3.5.0"
