--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha util"
+    "test": "mocha util/test"
   },
   "dependencies": {
     "auth0": "^2.3.1",
